--- a/monthly_challenges/challenges/templates/challenges/index.html
+++ b/monthly_challenges/challenges/templates/challenges/index.html
@@ -1,15 +1,15 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>All Challenge</title>
-</head>
-<body>
+{% extends "base.html" %}
+
+{% block page_title %}
+    All Challenges
+{% endblock %}
+
+{% block content %}
+    {% include "./includes/header.html" %}
+    
     <ul>
         {% for month in months %}
             <li><a href="{% url 'month-challenge' month %}">{{ month|title }}</a></li>
         {% endfor %}
     </ul>
-</body>
-</html>
+{% endblock %}
