--- a/monthly_challenges/challenges/templates/challenges/challenge.html
+++ b/monthly_challenges/challenges/templates/challenges/challenge.html
@@ -1,7 +1,13 @@
 {% extends "base.html" %}
+{% load static %}
 
 {% block page_title %}
     {{ month|title }} Challenge
+{% endblock %}
+
+{% block stylesheets %}
+    <link rel="stylesheet" href="{% static 'challenges/challenge.css' %}">
+    <link rel="stylesheet" href="{% static 'challenges/includes/header.css' %}">
 {% endblock %}
 
 {% block content %}
@@ -11,6 +17,6 @@
     {% if text is not None %}
         <h2>{{ text }}</h2>
     {% else %}
-        <p>There is no challenge for this month yet.</p>
+        <p class="fallback">There is no challenge for this month yet.</p>
     {% endif %}
 {% endblock %}
