--- a/monthly_challenges/challenges/templates/challenges/index.html
+++ b/monthly_challenges/challenges/templates/challenges/index.html
@@ -1,4 +1,10 @@
 {% extends "base.html" %}
+{% load static %}
+
+{% block stylesheets %}
+    <link rel="stylesheet" href="{% static 'challenges/index.css' %}">
+    <link rel="stylesheet" href="{% static 'challenges/includes/header.css' %}">
+{% endblock %}
 
 {% block page_title %}
     All Challenges
