--- a/my_site/blog/templates/blog/index.html
+++ b/my_site/blog/templates/blog/index.html
@@ -6,8 +6,8 @@
 {% endblock %}
 
 {% block css_files %}
-    <link rel="stylesheet" href="{% static 'blog/index.css' %}"
-    <link rel="stylesheet" href="{% static 'blog/post.css' %}"
+    <link rel="stylesheet" href="{% static 'blog/index.css' %}" />
+    <link rel="stylesheet" href="{% static 'blog/post.css' %}" />
 {% endblock %}
 
 {% block content %}
