--- a/my_site/templates/base.html
+++ b/my_site/templates/base.html
@@ -6,7 +6,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{% block title %}{% endblock %}</title>
-    <link rel="stylesheet" href="{% static 'app.css' %}">
+    <link rel="stylesheet" href="{% static 'app.css' %}" />
     {% block css_files %}{% endblock %}
 </head>
 <body>
