--- a/my_site/blog/templates/blog/all-posts.html
+++ b/my_site/blog/templates/blog/all-posts.html
@@ -15,12 +15,9 @@
         <h2>My Collected Posts</h2>
 
         <ul>
-            {% include 'blog/includes/post.html' %}
-            {% include 'blog/includes/post.html' %}
-            {% include 'blog/includes/post.html' %}
-            {% include 'blog/includes/post.html' %}
-            {% include 'blog/includes/post.html' %}
-            {% include 'blog/includes/post.html' %}
+            {% for post in posts %}
+                {% include 'blog/includes/post.html' %}
+            {% endfor %}
         </ul>
     </section>
 {% endblock %}
