--- a/my_site/templates/base.html
+++ b/my_site/templates/base.html
@@ -12,10 +12,10 @@
 <body>
     <header id="main-navigation">
         <h1>
-            <a href="">Gobind's Blog</a>
+            <a href="{% url 'starting-page' %}">Gobind's Blog</a>
         </h1>
         <nav>
-            <a href="">All Posts</a>
+            <a href="{% url 'posts-page' %}">All Posts</a>
         </nav>
     </header>
     {% block content %}
