--- a/book_store/book_outlet/templates/book_outlet/index.html
+++ b/book_store/book_outlet/templates/book_outlet/index.html
@@ -9,7 +9,7 @@
     <ul>
         {% for book in books %}
             <li>
-                <a href="/book/{{ book.slug }}">{{ book.title }}</a>
+                <a href="{{ book.get_absolute_url }}">{{ book.title }}</a>
             </li>
         {% endfor %}
     </ul>
