--- a/book_store/book_outlet/templates/book_outlet/index.html
+++ b/book_store/book_outlet/templates/book_outlet/index.html
@@ -16,6 +16,6 @@
 
     <h1>Total Number of Books</h1>
     <p>{{ book_count }}</p>
-    <h1>Average Rating<h1>
-    <p>{{ avg_rating }}
+    <h1>Average Rating</h1>
+    <p>{{ avg_rating }}</p>
 {% endblock %}
