--- a/feedback/reviews/templates/reviews/review.html
+++ b/feedback/reviews/templates/reviews/review.html
@@ -8,7 +8,21 @@
     <body>
         <form action="/" method="POST">
             {% csrf_token %}
-            {{ form }}
+            <div class="form-control {% if form.user_name.errors %}errors{% endif %}">
+                {{ form.user_name.label_tag }}
+                {{ form.user_name }}
+                {{ form.user_name.errors }}
+            </div>
+            <div class="form-control {% if form.review_text.errors %}errors{% endif %}">
+                {{ form.review_text.label_tag }}
+                {{ form.review_text }}
+                {{ form.review_text.errors }}
+            </div>
+            <div class="form-control {% if form.rating.errors %}errors{% endif %}">
+                {{ form.rating.label_tag }}
+                {{ form.rating }}
+                {{ form.rating.errors }}
+            </div>
             <button>Send</button>
         </form>
     </body>
